# caketool

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  mkdocs.yml  pyproject.toml  requirements.txt  robots.txt  search.js  sitemap.xml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
api/: caketool.html  index.html  search.js
api/caketool/: _version.html  eda.html  experiment.html  explainability.html  feature.html  report.html  utils.html
api/caketool/explainability/: base.html
api/caketool/feature/: feature_generator.html
api/caketool/metric/: association_metric.html
api/caketool/model/: config.html  regression.html
api/caketool/model/base/: ensemble.html
api/caketool/model/classification/: binary.html  multiclass.html
api/caketool/model/preprocess/: infinity_handler.html  missing_handler.html  outlier_handler.html
api/caketool/model/regression/: regressor.html
api/caketool/monitor/: adversarial_test.html  model_monitor.html
api/caketool/utils/: arr_utils.html  bq_utils.html  lib_utils.html  num_utils.html
blog/: index.html
blog/data-understanding/: index.html
blog/experimental-design/: index.html
blog/feature-engineering-ml/: index.html
blog/hyperparameter-tuning/: index.html
blog/interpretability/: index.html
blog/model-evaluation/: index.html
blog/model-selection/: index.html
blog/modeling-mindset/: index.html
blog/modeling-philosophy/: index.html
blog/problem-formulation/: index.html
blog/productionization-monitoring/: index.html
blog/training-optimization/: index.html
caketool/: _version.html  calibration.html  metric.html  model.html  monitor.html
caketool/explainability/: permutation_explainer.html
caketool/model/: boost_tree.html  feature_encoder.html  feature_remover.html  infinity_handler.html  voting_model.html
caketool/monitor/: adversarial_test.html
caketool/report/: risk_report.html
caketool/utils/: str_utils.html
demos/: adversarial_test_demo.ipynb  credit_score_demo.ipynb  eda.ipynb  experiment_tracker_demo.ipynb  feature_generator_demo.ipynb  normal_norm_demo.ipynb
docs/: 404.html  index.html  index.md
docs/api/caketool/: _version.html  model.html
docs/api/caketool/calibration/: normal_norm.html
docs/api/caketool/experiment/: experiment_tracker.html
docs/api/caketool/metric/: classification_metric.html  stability_metric.html
docs/api/caketool/model/: base.html  classification.html  preprocess.html  ranking.html
docs/api/caketool/utils/: phone_utils.html
docs/blog/: .authors.yml  index.html
docs/blog/data-understanding/: index.html
docs/blog/experimental-design/: index.html
docs/blog/feature-engineering-ml/: index.html
docs/blog/hyperparameter-tuning/: index.html
docs/blog/interpretability/: index.html
docs/blog/model-evaluation/: index.html
docs/blog/model-selection/: index.html
docs/blog/modeling-mindset/: index.html
docs/blog/modeling-philosophy/: index.html
docs/blog/posts/: data-understanding.md  experimental-design.md  feature-engineering-ml.md  hyperparameter-tuning.md  interpretability.md  model-evaluation.md  model-selection.md  modeling-mindset.md  modeling-philosophy.md  problem-formulation.md  productionization-monitoring.md  training-optimization.md
docs/blog/problem-formulation/: index.html
docs/blog/productionization-monitoring/: index.html
docs/blog/training-optimization/: index.html
search/: search_index.json
src/caketool/: __init__.py  __main__.py
src/caketool/calibration/: __init__.py  normal_norm.py
src/caketool/eda/: __init__.py  _validators.py  bivariate.py  config.py  multivariate.py  overview.py  quality.py  univariate.py
src/caketool/experiment/: __init__.py  experiment_tracker.py
src/caketool/explainability/: __init__.py  base.py  permutation_explainer.py  shap_explainer.py
src/caketool/feature/: __init__.py  feature_encoder.py  feature_generator.py  feature_remover.py  infinity_handler.py
src/caketool/metric/: __init__.py  association_metric.py  classification_metric.py  stability_metric.py
src/caketool/model/: __init__.py  boost_tree.py  config.py  feature_encoder.py  feature_remover.py  infinity_handler.py  voting_model.py
src/caketool/model/base/: __init__.py  boost_tree.py  ensemble.py  voting_model.py
src/caketool/model/classification/: __init__.py  binary.py  multiclass.py
src/caketool/monitor/: __init__.py  adversarial_test.py  feature_monitor.py  model_monitor.py  monitor.py
src/caketool/report/: __init__.py  risk_report.py
src/caketool/utils/: __init__.py  arr_utils.py  bq_utils.py  lib_utils.py  num_utils.py  phone_utils.py  str_utils.py
tests/: conftest.py  test_adversarial.py  test_association_metric.py  test_calibration.py  test_eda.py  test_experiment_tracker.py  test_feature_generator.py  test_lib_utils.py  test_metric.py  test_model.py  test_model_base.py  test_model_binary.py  test_permutation_explainer.py  test_preprocess.py  test_risk_report.py  test_shap_explainer.py  test_stability_metric.py
(+15 files in other folders)
