[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caketool"
dynamic = ["version"]
description = "Common tools for MLOps"
readme = "README.md"
authors = [{ name = "Khoi Do", email = "khoidd@outlook.com" }]
license = "MIT"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["cake", "ds", "mlops"]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "tqdm",
    "xgboost",
    "category_encoders",
    "python-dotenv",
]
requires-python = ">=3.10"

[project.optional-dependencies]
onprem = ["mlflow"]
gcp = ["google-cloud-aiplatform", "google-cloud-bigquery"]
wandb = ["wandb"]
explainability = ["shap"]
all = [
    "mlflow",
    "google-cloud-aiplatform",
    "google-cloud-bigquery",
    "wandb",
    "shap",
]
dev = [
    "build",
    "twine",
    "pip-tools",
    "pytest",
    "ipykernel",
    "ruff",
    "pre-commit",
]

[project.scripts]
caketool = "caketool.__main__:main"

[project.urls]
Homepage = "https://github.com/cake-digital-bank"

[tool.setuptools_scm]
write_to = "src/caketool/_version.py"

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src"]
exclude = ["demos/"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]
