[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caketool"
dynamic = ["version"]
description = "Common tools for MLOps"
readme = "README.md"
authors = [{ name = "Khoi Do", email = "khoidd@outlook.com" }]
license = "MIT"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["cake", "ds", "mlops"]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "tqdm>=4.60",
    "xgboost>=2.0",
    "category-encoders>=2.6",
    "python-dotenv>=1.0",
    "shap>=0.45",
    "plotly>=5.0",
    "nbformat>=5.0",
    "google-cloud-bigquery>=3.0", # deprecated, will be moved to gcp extra
]
requires-python = ">=3.10"

[project.optional-dependencies]
onprem = ["mlflow>=2.0"]
gcp = [
    "google-cloud-aiplatform>=1.50",
    "google-cloud-bigquery>=3.0",
    "google-cloud-storage>=2.0",
    "bigframes>=1.0",
]
wandb = ["wandb>=0.17"]
spark = ["pyspark>=3.3"]
polars = ["polars>=0.20"]
all = [
    "caketool[onprem]",
    "caketool[gcp]",
    "caketool[wandb]",
    "caketool[spark]",
    "caketool[polars]",
]
docs = [
    "pdoc>=14.0",
    "mkdocs-material[imaging]>=9.0",
]
dev = [
    "build",
    "twine",
    "pip-tools",
    "pytest",
    "ipykernel",
    "ruff",
    "pre-commit",
]

[project.scripts]
caketool = "caketool.__main__:main"

[project.urls]
Homepage = "https://mazino2d.github.io/caketool"
Repository = "https://github.com/mazino2d/caketool"

[tool.setuptools_scm]
write_to = "src/caketool/_version.py"

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src"]
exclude = ["demos/"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]
